# sctplib

./: CMakeLists.txt
sctplib/: CMakeLists.txt
sctplib/programs/: CMakeLists.txt
sctplib/sctp/: CMakeLists.txt  adaptation.c  auxiliary.c  globals.c  globals.h
